--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>flatdango</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+  <section id = "main">
+    <header>
+     <h1>THE MOVIE THEATRE</h1>
+    </header>
+     </section>
+     <section id = "new">
+    <div><h2>AVAILABLE MOVIES</h2>
+      <div id="listContainer">
+      <ul id="list"></ul>
+      </div>
+    </div>
+    </section>
+    <section id="centered">
+    <div id="moviesContainer">
+      <div id="movies"></div>
+      <!-- <button id="buyTicketBtn">Buy Ticket</button> -->
+    </div>
+    </section>
 
+
+
+  <script src="index.js"></script>
+</body>
+</html>
